reorg team page

--- a/templates/team.html
+++ b/templates/team.html
@@ -90,7 +90,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   </a>
                 </div>
                 <div class="title">
-                  {{ gettext("R&D Engineer") }}
+                  {{ gettext("Founding Engineer") }}
                 </div>
                 <div class="bio">
                   {{ gettext("Yu Pan was one of the 6 founding team members of
