--- a/templates/whitepaper/team.html
+++ b/templates/whitepaper/team.html
@@ -107,7 +107,7 @@
             </a>
           </div>
           <div class="title">
-            {{ gettext("R&D Engineer") }}
+            {{ gettext("Founding Engineer") }}
           </div>
           <div class="bio text-center">
             {{ gettext("Yu Pan was one of the 6 founding team members of PayPal
