--- a/templates/whitepaper/team.html
+++ b/templates/whitepaper/team.html
@@ -426,20 +426,13 @@
   <div id="community" class="mt-5">
     <h2>{{gettext("Community")}}</h2>
     <div class="d-flex flex-sm-row flex-wrap align-items-center justify-content-around">
+
       <div class="team-member">
         <div class="headshot-wrapper">
           <img src="/static/img/headshot-zoe.jpg" class="headshot" alt="Zoe Hoang headshot" />
         </div>
         <div class="name">
           {{ gettext("Zoe Hoang") }}
-        </div>
-      </div>
-      <div class="team-member">
-        <div class="headshot-wrapper">
-          <img src="/static/img/headshot-spyros.jpg" class="headshot" alt="Spyros Kekos headshot" />
-        </div>
-        <div class="name">
-          {{ gettext("Spyros Kekos") }}
         </div>
       </div>
       <div class="team-member">
@@ -460,12 +453,53 @@
       </div>
       <div class="team-member">
         <div class="headshot-wrapper">
-          <img src="/static/img/headshot-leslie.png" class="headshot" alt="Leslie Song headshot" />
+          <img src="/static/img/headshot-kevin.png" class="headshot" alt="Kevin Lee headshot" />
         </div>
         <div class="name">
-          {{ gettext("Leslie Song") }}
+          {{ gettext("Kevin Lee") }}
         </div>
       </div>
+      <div class="team-member">
+        <div class="headshot-wrapper">
+          <img src="/static/img/headshot-danil.jpeg" class="headshot" alt="Danil Myakin headshot" />
+        </div>
+        <div class="name">
+          {{ gettext("Danil Myakin") }}
+        </div>
+      </div>
+      <div class="team-member">
+        <div class="headshot-wrapper">
+          <img src="/static/img/headshot-joseph.jpg" class="headshot" alt="Joseph Stewart headshot" />
+        </div>
+        <div class="name">
+          {{ gettext("Joseph Stewart") }}
+        </div>
+      </div>
+      <div class="team-member">
+        <div class="headshot-wrapper">
+          <img src="/static/img/headshot-erkan.png" class="headshot" alt="Erkan Ciftci headshot" />
+        </div>
+        <div class="name">
+          {{ gettext("Erkan Ciftci") }}
+        </div>
+      </div>
+      <div class="team-member">
+        <div class="headshot-wrapper">
+          <img src="/static/img/headshot-stefano.jpg" class="headshot" alt="Stefano Terenzi headshot" />
+        </div>
+        <div class="name">
+          {{ gettext("Stefano Terenzi") }}
+        </div>
+      </div>
+      <div class="team-member">
+        <div class="headshot-wrapper">
+          <img src="/static/img/headshot-zizen.jpg" class="headshot" alt="Zizen Chang headshot" />
+        </div>
+        <div class="name">
+          {{ gettext("Zizen Chang") }}
+        </div>
+      </div>
+    
     </div>
   </div>
 
