--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -78,7 +78,7 @@
             <a class="nav-link{% if 'product' in request.path %} selected{% endif %}" href="{{ url_for('product', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Products") }}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link{% if 'ogn_token' in request.path %} selected{% endif %}" href="{{ url_for('ogn_token', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("OGN Token") }}</a>
+            <a class="nav-link{% if 'dashboard' in request.path %} selected{% endif %}" href="{{ url_for('dashboard', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("OGN Token") }}</a>
           </li>
          
           <!--<li class="nav-item">
