add lee to community team

--- a/templates/team.html
+++ b/templates/team.html
@@ -486,6 +486,14 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("Zizen Chang") }}
           </div>
         </div>
+        <div class="team-member">
+          <div class="headshot-wrapper">
+            <img src="/static/img/headshot-lee.png" class="headshot" alt="Lee Gwangmyeong headshot" />
+          </div>
+          <div class="name">
+            {{ gettext("Lee Gwangmyeong") }}
+          </div>
+        </div>
 
       </div>
     </div>
