--- a/templates/whitepaper/team.html
+++ b/templates/whitepaper/team.html
@@ -499,6 +499,14 @@
           {{ gettext("Zizen Chang") }}
         </div>
       </div>
+      <div class="team-member">
+        <div class="headshot-wrapper">
+          <img src="/static/img/headshot-lee.png" class="headshot" alt="Lee Gwangmyeong headshot" />
+        </div>
+        <div class="name">
+          {{ gettext("Lee Gwangmyeong") }}
+        </div>
+      </div>
     
     </div>
   </div>
