--- a/templates/about.html
+++ b/templates/about.html
@@ -81,8 +81,7 @@ theme_dark=True %} {% include 'navbar.html' %} {% endwith %}
         <div class="section-text mb-0">
           {{gettext("Centralized intermediaries often charge 20-30%% in
           transaction fees. Airbnb grossed $2.6B in fees in 2017, while Uber
-          took home a monumental $11.8B in fees in 2018. Total sharing economy
-          fees are expected to cross $40B by 2020.")}}
+          took home a monumental $11.8B in fees in 2018.")}}
         </div>
         <div class="section-text">
           {{gettext("By removing the middlemen, Origin removes these fees.
