use now.year instead of hard-coding the year

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -94,7 +94,7 @@
       </div>
       <div class="d-flex d-md-none col-12">
         <div class="copyright-text d-flex flex-column">
-          <div>{{gettext("Copyright © 2019 Origin Protocol Inc. All rights reserved.")}}</div>
+          <div>{{gettext("Copyright © {{ now.year}} Origin Protocol Inc. All rights reserved.")}}</div>
           <div class="mt-2">
             <a class="pr-2" href="https://help.originprotocol.com">
               {{ gettext("Help") }}
