add missing class

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -336,13 +336,13 @@
     <div class="container">
       <h3>{{gettext("Decentralized Exchanges")}}</h3>
       <div class="exchanges row mb-5">
-        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center xxl">
           <a target="_blank" rel="noopener noreferrer"
             href="https://exchange.sushiswapclassic.org/#/swap?outputCurrency=0x8207c1FfC5B6804F6024322CcF34F29c3541Ae26">
             <img src="/static/img/ognToken/sushiswap.png" />
           </a>
         </div>
-        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center xxl">
           <a target="_blank" rel="noopener noreferrer"
             href="https://uniswap.exchange/swap?outputCurrency=0x8207c1FfC5B6804F6024322CcF34F29c3541Ae26">
             <img src="/static/img/ognToken/uniswap.png" />
