add hitbtc logo

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -312,6 +312,11 @@
           </a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
+          <a target="_blank" rel="noopener noreferrer" href="https://hitbtc.com/ogn-to-btc">
+            <img src="/static/img/ognToken/hitbtc-logo.png" />
+          </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
           <a target="_blank" rel="noopener noreferrer" href="https://www.mxc.com/trade/pro#OGN_USDT">
             <img src="/static/img/ognToken/mxc.svg" />
           </a>
