ad no referrer to the target=_blank links

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -236,7 +236,7 @@
           <h1>{{gettext("Stake OGN on OUSD.com")}}</h1>
           <p>{{gettext("Stake your OGN to earn up to 25%%")}}</p>
         </div>
-        <a class='btn btn-dark ml-lg-auto' href="{{universal.STAKE_URL}}" target="_blank">
+        <a class='btn btn-dark ml-lg-auto' href="{{universal.STAKE_URL}}" target="_blank" rel="noopener noreferrer">
           {{gettext("Stake OGN now")}}
         </a>
       </div>
