--- a/templates/developers.html
+++ b/templates/developers.html
@@ -73,7 +73,7 @@
     </div>
   </div>
   <div class="d-flex justify-content-center">
-    <a href="https://github.com/OriginProtocol/origin" target="_blank" class="button mt-6">{{gettext("See the Code")}}</a>
+    <a href="https://github.com/OriginProtocol/origin" target="_blank" rel="noopener noreferrer" class="button mt-6">{{gettext("See the Code")}}</a>
   </div>
   <!-- getting involved -->
   <div class="getting-involved">
@@ -111,24 +111,24 @@
       </div>
       <!-- github labels section -->
       <div class="d-flex justify-content-center flex-wrap labels-section">
-        <a href='https://github.com/OriginProtocol/origin/issues?q=is%3Aissue+is%3Aopen+label%3A"good+first+issue"' class="github-label mx-1 my-2" target="_blank">
+        <a href='https://github.com/OriginProtocol/origin/issues?q=is%3Aissue+is%3Aopen+label%3A"good+first+issue"' class="github-label mx-1 my-2" target="_blank" rel="noopener noreferrer">
           {{gettext("good first issue")}}
         </a>
-        <a href='https://github.com/OriginProtocol/origin/issues?q=is%3Aissue+is%3Aopen+label%3Asolidity' class="github-label mx-1 my-2" target="_blank">
+        <a href='https://github.com/OriginProtocol/origin/issues?q=is%3Aissue+is%3Aopen+label%3Asolidity' class="github-label mx-1 my-2" target="_blank" rel="noopener noreferrer">
           {{gettext("solidity")}}
         </a>
-        <a href='https://github.com/OriginProtocol/origin/issues?q=is%3Aissue+is%3Aopen+label%3Ajavascript' class="github-label mx-1 my-2" target="_blank">
+        <a href='https://github.com/OriginProtocol/origin/issues?q=is%3Aissue+is%3Aopen+label%3Ajavascript' class="github-label mx-1 my-2" target="_blank" rel="noopener noreferrer">
           {{gettext("javascript")}}
         </a>
-        <a href='https://github.com/OriginProtocol/origin/issues?q=is%3Aissue+is%3Aopen+label%3Agraphql' class="github-label mx-1 my-2" target="_blank">
+        <a href='https://github.com/OriginProtocol/origin/issues?q=is%3Aissue+is%3Aopen+label%3Agraphql' class="github-label mx-1 my-2" target="_blank" rel="noopener noreferrer">
           {{gettext("graphql")}}
         </a>
-        <a href='https://github.com/OriginProtocol/origin/issues?q=is%3Aissue+is%3Aopen+label%3Ahtml%2Fcss' class="github-label mx-1 my-2" target="_blank">
+        <a href='https://github.com/OriginProtocol/origin/issues?q=is%3Aissue+is%3Aopen+label%3Ahtml%2Fcss' class="github-label mx-1 my-2" target="_blank" rel="noopener noreferrer">
           {{gettext("html/css")}}
         </a>
       </div>
       <div class="mt-6 d-flex flex-column flex-md-row">
-        <a href="https://discordapp.com/invite/jyxpUSe" target="_blank" class="button ml-0 ml-md-2">{{gettext("Join us on Discord")}}</a>
+        <a href="https://discordapp.com/invite/jyxpUSe" target="_blank" rel="noopener noreferrer" class="button ml-0 ml-md-2">{{gettext("Join us on Discord")}}</a>
       </div>
     </div>
   </div>
