--- a/templates/landing.html
+++ b/templates/landing.html
@@ -29,11 +29,11 @@
       </button>
       <div class="mt-2">{{gettext("Watch the video")}}</div>
       <div class="bottom clickable d-flex justify-content-center mb-4 flex-wrap">
-        <a href="https://techcrunch.com/2018/10/10/origin-protocol/" target="_blank"><img src="/static/img/landing/techcrunch.svg"/></a>
-        <a href="https://www.forbes.com/sites/leslieankney/2019/01/21/why-these-innovators-left-facebook-google-and-more-for-crypto/#7f2871a15a06" target="_blank"><img src="/static/img/landing/forbes.svg"/></a>
-        <a href="https://www.inc.com/joel-comm/why-best-blockchain-is-an-invisible-blockchain.html" target="_blank"><img src="/static/img/landing/inc.svg"/></a>
-        <a href="https://www.coindesk.com/pantera-invests-3-million-sharing-economy-token-origin/" target="_blank"><img src="/static/img/landing/coindesk.svg"/></a>
-        <a href="https://www.wsj.com/articles/origin-protocol-nabs-28-million-for-peer-to-peer-blockchain-platform-1524700028" target="_blank"><img src="/static/img/landing/wsj.svg"/></a>
+        <a href="https://techcrunch.com/2018/10/10/origin-protocol/" target="_blank" rel="noopener noreferrer"><img src="/static/img/landing/techcrunch.svg"/></a>
+        <a href="https://www.forbes.com/sites/leslieankney/2019/01/21/why-these-innovators-left-facebook-google-and-more-for-crypto/#7f2871a15a06" target="_blank" rel="noopener noreferrer"><img src="/static/img/landing/forbes.svg"/></a>
+        <a href="https://www.inc.com/joel-comm/why-best-blockchain-is-an-invisible-blockchain.html" target="_blank" rel="noopener noreferrer"><img src="/static/img/landing/inc.svg"/></a>
+        <a href="https://www.coindesk.com/pantera-invests-3-million-sharing-economy-token-origin/" target="_blank" rel="noopener noreferrer"><img src="/static/img/landing/coindesk.svg"/></a>
+        <a href="https://www.wsj.com/articles/origin-protocol-nabs-28-million-for-peer-to-peer-blockchain-platform-1524700028" target="_blank" rel="noopener noreferrer"><img src="/static/img/landing/wsj.svg"/></a>
       </div>
     </div>
   </div>
