--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -82,7 +82,7 @@
           </li>
          
           <!--<li class="nav-item">
-            <a class="nav-link" href="https://www.shoporigin.com" target="_blank">{{ gettext("Shop") }}</a>
+            <a class="nav-link" href="https://www.shoporigin.com" target="_blank" rel="noopener noreferrer">{{ gettext("Shop") }}</a>
           </li>-->
           <li class="d-none d-lg-block nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ AVAILABLE_LANGUAGES[CURRENT_LANGUAGE] }}</a>
