--- a/templates/product.html
+++ b/templates/product.html
@@ -106,7 +106,7 @@
       </div>
     </div>
     <div class="opaque mt-5 mt-md-3 mb-3 mb-md-0">{{gettext("Featured on")}}</div>
-    <a href="https://medium.com/originprotocol/samsung-keystore-sdk-react-native-wrapper-65b73294cf33" target="_blank">
+    <a href="https://medium.com/originprotocol/samsung-keystore-sdk-react-native-wrapper-65b73294cf33" target="_blank" rel="noopener noreferrer">
       <img class="mb-0 mb-md-4 samsung-blockchain" src="/static/img/product/samsung-blockchain-logo.svg"/>
     </a>
     <div class="opaque mt-5 mt-md-3">{{gettext("Available on")}}</div>
