--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -311,7 +311,7 @@
             <img src="/static/img/ognToken/bittrex-logo.svg" />
           </a>
         </div>
-        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center large">
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
           <a target="_blank" rel="noopener noreferrer" href="https://hitbtc.com/ogn-to-btc">
             <img src="/static/img/ognToken/hitbtc-logo.png" />
           </a>
