Updated env.sh to make it compatible with zsh (macOS). Made changes to the DShop marketing website as per #579

--- a/templates/dshop.html
+++ b/templates/dshop.html
@@ -24,7 +24,7 @@
       <div class="sub-title">{{gettext("Run and grow your business with Dshop, a customizable and open-source e-commerce platform built on the decentralized web.  Get started for free and launch your store in a day.")}}</div>
       <a 
         class="primary-button" 
-        href="https://dshop.originprotocol.com"
+        href="https://dshop.originprotocol.com/#/admin/signup"
         target="_blank"
         rel="noreferrer noopener"
       >{{ gettext("Try it – it’s free") }}</a>
@@ -360,7 +360,7 @@
     <div class="subtitle">{{gettext("Ready to start selling today?")}}</div>
     <a 
       class="primary-button" 
-      href="https://dshop.originprotocol.com"
+      href="https://dshop.originprotocol.com/#/admin/signup"
       target="_blank"
       rel="noreferrer noopener"
     >{{ gettext("Try it – it’s free") }}</a>
