--- a/templates/navbar-dshop.html
+++ b/templates/navbar-dshop.html
@@ -9,7 +9,7 @@
         <a class="nav-item" href="#customers">{{ gettext("Our Customers") }}</a>
         <a 
           class="outline-button d-flex align-items-center justify-content-center" 
-          href="https://dshop.originprotocol.com"
+          href="https://dshop.originprotocol.com/#/admin/signup"
           target="_blank"
           rel="noreferrer noopener"
         >{{ gettext("Try it - it's free") }}</a>
@@ -45,7 +45,7 @@
         <li class="nav-item">
           <a 
             class="outline-button" 
-            href="https://dshop.originprotocol.com"
+            href="https://dshop.originprotocol.com/#/admin/signup"
             target="_blank"
             rel="noreferrer noopener"
           >{{ gettext("Try it - it's free") }}</a>
