--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
 <body dir="{{ CURRENT_LANGUAGE_DIRECTION }}" id="{{ CURRENT_LANGUAGE_DIRECTION }}">
   {% block body %}
   {% if hide_ogn_banner is not defined or hide_ogn_banner == False %}
-  {% include 'stake-banner.html' %}
+  {% include 'nft-banner.html' %}
   {% endif %}
   {% block content %}
   {% endblock %}
