--- a/static/css/common.css
+++ b/static/css/common.css
@@ -83,6 +83,11 @@ section.white-section {
   background-color: #fff;
 }
 
+section.dark-section {
+  background-color: #061d2a;
+  color: #fff;
+}
+
 /** buttons */
 main section .btn {
   width: 400px;
