Change heading on litepaper

--- a/templates/litepaper.html
+++ b/templates/litepaper.html
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="col-12 col-md-10 d-flex align-items-center">
           <h1 class="title big">
-            <span>{{gettext("Origin Protocol")}}</span>
+            <span>{{gettext("Litepaper")}}</span>
             {{gettext("Bringing peer-to-peer commerce and decentralized finance to the masses")}}
           </h1>
         </div>
